# occt-feedstock

./: .appveyor.yml  .recipe_maintainers.json  .travis.yml  README.md  appveyor.yml  conda-forge.yml  pixi.toml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: appveyor_cxx_compilervs2015target_platformwin-32.yaml  appveyor_cxx_compilervs2015target_platformwin-64.yaml  appveyor_python3.6target_platformwin-32.yaml  appveyor_python3.6target_platformwin-64.yaml  circle_.yaml  linux_.yaml  linux_64_.yaml  linux_64_build_variantegl.yaml  linux_64_build_variantosmesa.yaml  linux_64_build_variantqt.yaml  linux_64_variantall.yaml  linux_64_variantnovtk.yaml  linux_64_vtk_build_variantegl.yaml  linux_64_vtk_build_variantosmesa.yaml  linux_64_vtk_build_variantqt.yaml  linux_aarch64_.yaml  linux_aarch64_variantall.yaml  linux_aarch64_variantnovtk.yaml  linux_cxx_compilergxx.yaml  linux_cxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  linux_ppc64le_variantall.yaml  linux_ppc64le_variantnovtk.yaml  osx_.yaml  osx_64_.yaml  osx_64_variantall.yaml  osx_64_variantnovtk.yaml  osx_arm64_.yaml  osx_arm64_variantall.yaml  osx_arm64_variantnovtk.yaml  osx_cxx_compilerclangxx.yaml  win_.yaml  (+4 more)
recipe/: CMakeLists.txt  ShapeUpgrade.patch  bld.bat  boolean_intersection.patch  build.bat  build.sh  conda_build_config.yaml  error-checking.patch  fix-step-import.patch  install_occt.sh  install_occt_vtk.bat  install_occt_vtk.sh  meta.yaml  recipe.yaml  vtk.patch
recipe/patches/: blobfish.patch  cmake_policy.patch  error-checking.patch
(+7 files in other folders)
